[gd_scene load_steps=34 format=4 uid="uid://dn1pv1sfl065b"]

[ext_resource type="TileSet" uid="uid://b73oh2j4enl2e" path="res://level/level_tileset.tres" id="1_01x3t"]
[ext_resource type="Script" path="res://player.gd" id="2_wt8vp"]
[ext_resource type="Resource" uid="uid://f05heqoffn6w" path="res://entity/player/assets/small_stats.tres" id="3_4c02w"]
[ext_resource type="Resource" uid="uid://cn6yin4quysjt" path="res://entity/player/assets/normal_stats.tres" id="4_em46x"]
[ext_resource type="Resource" uid="uid://bta17un35teqs" path="res://entity/player/assets/big_stats.tres" id="5_0y1wb"]
[ext_resource type="Texture2D" uid="uid://cpawvpq4qahd4" path="res://entity/player/assets/goblin-sheet.png" id="6_m5rji"]
[ext_resource type="Script" path="res://player_animation.gd" id="7_pt523"]

[sub_resource type="Gradient" id="Gradient_qmxw5"]
colors = PackedColorArray(0, 0.439216, 0.686275, 1, 0.207558, 0.000121289, 0.672063, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dvb2q"]
gradient = SubResource("Gradient_qmxw5")

[sub_resource type="Curve" id="Curve_18xam"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.990148, 0), -2.29563, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_dos7s"]
curve = SubResource("Curve_18xam")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bem8g"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 8.0
angle_min = 1.07288e-05
angle_max = 182.4
direction = Vector3(0, -1, 0)
spread = 80.238
initial_velocity_min = 60.0
initial_velocity_max = 60.0
gravity = Vector3(0, 60, 0)
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_dos7s")
color_ramp = SubResource("GradientTexture1D_dvb2q")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rdblh"]
radius = 17.0
height = 64.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_44jb1"]
radius = 8.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rfxvx"]
radius = 48.0
height = 128.0

[sub_resource type="Animation" id="Animation_8ljjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a3k11"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 5]
}

[sub_resource type="Animation" id="Animation_v2y58"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_6u34k"]
resource_name = "move_left"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_055o3"]
resource_name = "move_right"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yq77u"]
_data = {
"RESET": SubResource("Animation_8ljjk"),
"idle": SubResource("Animation_a3k11"),
"jump": SubResource("Animation_v2y58"),
"move_left": SubResource("Animation_6u34k"),
"move_right": SubResource("Animation_055o3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8e2a5"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8bloe"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5kgpu"]
animation = &"move_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k5ngq"]
animation = &"move_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_46ajk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_5kgpu")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_k5ngq")
blend_point_1/pos = 1.0
snap = 1.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_808h2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qo66w"]
advance_mode = 2
advance_expression = "not velocity.is_zero_approx()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6spo5"]
advance_mode = 2
advance_expression = "velocity.is_zero_approx()"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6m86e"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8t25k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dfjjv"]
advance_mode = 2
advance_expression = "is_on_floor()"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_c5e1e"]
states/idle/node = SubResource("AnimationNodeAnimation_8e2a5")
states/idle/position = Vector2(375, 52)
states/jump/node = SubResource("AnimationNodeAnimation_8bloe")
states/jump/position = Vector2(506, 159)
states/move/node = SubResource("AnimationNodeBlendSpace1D_46ajk")
states/move/position = Vector2(579, 86)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_808h2"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_qo66w"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_6spo5"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_6m86e"), "move", "jump", SubResource("AnimationNodeStateMachineTransition_8t25k"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_dfjjv")]

[node name="Level1" type="Node2D"]

[node name="Platforms" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADw//T/AAABAAEAAAAcAAkAAAABAAEAAADo//T/AAABAAEAAADo//X/AAABAAEAAADo//b/AAABAAEAAADo//f/AAABAAEAAADo//j/AAABAAEAAADo//n/AAABAAEAAADo//r/AAABAAEAAADo//v/AAABAAEAAADo//z/AAABAAEAAADo//3/AAABAAEAAADo//7/AAABAAEAAADo////AAABAAEAAADo/wAAAAABAAEAAADo/wEAAAABAAEAAADo/wIAAAABAAIAAADo/wMAAAAAAAAAAADo/wQAAAAAAAAAAADo/wUAAAAAAAAAAADo/wYAAAABAAAAAADo/wcAAAABAAEAAADo/wgAAAABAAEAAADo/wkAAAABAAEAAADo/woAAAABAAEAAADo/wsAAAABAAEAAADp//T/AAABAAEAAADp/wsAAAABAAEAAADq//T/AAABAAEAAADq/wsAAAABAAEAAADr//T/AAABAAEAAADr/wsAAAABAAEAAADs//T/AAABAAEAAADs/wsAAAABAAEAAADt//T/AAABAAEAAADt/wsAAAABAAEAAADu//T/AAABAAEAAADu/wsAAAABAAEAAADv//T/AAABAAEAAADv/wsAAAABAAEAAADw/wsAAAABAAEAAADx//T/AAABAAEAAADx/wsAAAABAAEAAADy//T/AAABAAEAAADy/wsAAAABAAEAAADz//T/AAABAAEAAADz/wsAAAABAAEAAAD0//T/AAABAAEAAAD0/wsAAAABAAEAAAD1//T/AAABAAEAAAD1/wsAAAABAAEAAAD2//T/AAABAAEAAAD2/wsAAAABAAEAAAD3//T/AAABAAEAAAD3/wsAAAABAAEAAAD4//T/AAABAAEAAAD4/wsAAAABAAEAAAD5//T/AAABAAEAAAD5/wsAAAABAAEAAAD6//T/AAABAAEAAAD6/wsAAAABAAEAAAD7//T/AAABAAEAAAD7/wsAAAABAAEAAAD8//T/AAABAAEAAAD8/wsAAAABAAEAAAD9//T/AAABAAEAAAD9/wsAAAABAAEAAAD+//T/AAABAAEAAAD+/wsAAAABAAEAAAD///T/AAABAAEAAAD//wsAAAABAAEAAAAAAPT/AAABAAEAAAAAAAsAAAABAAEAAAABAPT/AAABAAEAAAABAAsAAAABAAEAAAACAPT/AAABAAEAAAACAAsAAAABAAEAAAADAPT/AAABAAEAAAADAAsAAAABAAEAAAAEAPT/AAABAAEAAAAEAAsAAAABAAEAAAAFAPT/AAABAAEAAAAFAAsAAAABAAEAAAAGAPT/AAABAAEAAAAGAAsAAAABAAEAAAAHAPT/AAABAAEAAAAHAAsAAAABAAEAAAAIAPT/AAABAAEAAAAIAAsAAAABAAEAAAAJAPT/AAABAAEAAAAJAAsAAAABAAEAAAAKAPT/AAABAAEAAAAKAAsAAAABAAEAAAALAPT/AAABAAEAAAALAAsAAAABAAEAAAAMAPT/AAABAAEAAAAMAAsAAAABAAEAAAANAPT/AAABAAEAAAANAAsAAAABAAEAAAAOAPT/AAABAAEAAAAOAAsAAAABAAEAAAAPAPT/AAABAAEAAAAPAAsAAAABAAEAAAAQAPT/AAABAAEAAAAQAAsAAAABAAEAAAARAPT/AAABAAEAAAARAAsAAAABAAEAAAASAPT/AAABAAEAAAASAAsAAAABAAEAAAATAPT/AAABAAEAAAATAAsAAAABAAEAAAAUAPT/AAABAAEAAAAUAAsAAAABAAEAAAAVAPT/AAABAAEAAAAVAAsAAAABAAEAAAAWAPT/AAABAAEAAAAWAAsAAAABAAEAAAAXAPT/AAABAAEAAAAXAAsAAAABAAEAAAAYAPT/AAABAAEAAAAYAAsAAAABAAEAAAAZAPT/AAABAAEAAAAZAAsAAAABAAEAAAAaAPT/AAABAAEAAAAaAAsAAAABAAEAAAAbAPT/AAABAAEAAAAbAAsAAAABAAEAAAAcAPT/AAABAAEAAAAcAPX/AAABAAEAAAAcAPb/AAABAAEAAAAcAPf/AAABAAEAAAAcAPj/AAABAAEAAAAcAPn/AAABAAEAAAAcAPr/AAABAAEAAAAcAPv/AAABAAEAAAAcAPz/AAABAAEAAAAcAP3/AAABAAEAAAAcAP7/AAABAAEAAAAcAP//AAABAAEAAAAcAAAAAAABAAEAAAAcAAEAAAABAAEAAAAcAAIAAAABAAEAAAAcAAMAAAABAAEAAAAcAAQAAAABAAEAAAAcAAUAAAABAAEAAAAcAAYAAAABAAEAAAAcAAcAAAABAAEAAAAcAAgAAAABAAEAAAAcAAoAAAABAAEAAAAcAAsAAAABAAEAAAA=")
tile_set = ExtResource("1_01x3t")

[node name="Decor" type="TileMapLayer" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_wt8vp")
size_stats = {
0: ExtResource("3_4c02w"),
1: ExtResource("4_em46x"),
2: ExtResource("5_0y1wb")
}
stats = ExtResource("4_em46x")

[node name="SizeChangeParticles" type="GPUParticles2D" parent="Player"]
position = Vector2(0, -18)
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_bem8g")
one_shot = true
explosiveness = 1.0

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(2, 4)
texture = ExtResource("6_m5rji")
centered = false
offset = Vector2(-12, -20)
hframes = 5
vframes = 8

[node name="NormalCollider" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -32)
shape = SubResource("CapsuleShape2D_rdblh")

[node name="SmallCollider" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_44jb1")
disabled = true

[node name="BigCollider" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -64)
shape = SubResource("CapsuleShape2D_rfxvx")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player" node_paths=PackedStringArray("sprite_2d")]
libraries = {
"": SubResource("AnimationLibrary_yq77u")
}
script = ExtResource("7_pt523")
sprite_2d = NodePath("../Sprite2D")

[node name="AnimationTree" type="AnimationTree" parent="Player/AnimationPlayer"]
root_node = NodePath("../..")
tree_root = SubResource("AnimationNodeStateMachine_c5e1e")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("..")
parameters/move/blend_position = 1.0

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
